--- a/hr_fingerprint_ams/views/hr_fingerprint.xml
+++ b/hr_fingerprint_ams/views/hr_fingerprint.xml
@@ -67,7 +67,12 @@
                             domain="[('date','&lt;=',(context_today()+relativedelta(day=31)).strftime('%%Y-%%m-%%d')), ('date','&gt;=',(context_today()-relativedelta(day=1)).strftime('%%Y-%%m-%%d'))]"/>
                     <filter name="filter_year" icon="terp-go-year" string="This Year"
                             domain="[('date','&lt;=',(context_today()+relativedelta(day=31, month=12)).strftime('%%Y-%%m-%%d')), ('date','&gt;=',(context_today()-relativedelta(day=1, month=1)).strftime('%%Y-%%m-%%d'))]"/>
-
+                    <separator/>
+                    <filter icon="terp-go-month" string="Previous Month"
+                            domain="[('date','&lt;=',(context_today()+relativedelta(months=1,days=-1)).strftime('%Y-%m-%d')), ('date','&gt;=',(context_today()+relativedelta(months=-1,day=1)).strftime('%Y-%m-%d'))]"/>
+                    <!-- Relativedelta required weeks, days and weekday -->
+                    <filter icon="terp-go-month" string="Previous Week"
+                            domain="[('date','&lt;=',(context_today()+relativedelta(weeks=-2, days=7, weekday=6)).strftime('%Y-%m-%d')), ('date','&gt;=',(context_today()+relativedelta(weeks=-2, days=1, weekday=0)).strftime('%Y-%m-%d'))]"/>
                     <group expand="1" string="Group By">
                         <filter name="by_department" string="Department"
                                 context="{'group_by': 'department'}"/>
@@ -132,10 +137,17 @@
                             domain="[('state', '=', 'approved') ]"/>
                     <filter name="filter_payslip" string="Payslip"
                             domain="[('state', '=', 'payslip') ]"/>
+                    <separator/>
                     <filter name="filter_month" icon="terp-go-month" string="This Month"
                             domain="[('date','&lt;=',(context_today()+relativedelta(day=31)).strftime('%%Y-%%m-%%d')), ('date','&gt;=',(context_today()-relativedelta(day=1)).strftime('%%Y-%%m-%%d'))]"/>
                     <filter name="filter_year" icon="terp-go-year" string="This Year"
                             domain="[('date','&lt;=',(context_today()+relativedelta(day=31, month=12)).strftime('%%Y-%%m-%%d')), ('date','&gt;=',(context_today()-relativedelta(day=1, month=1)).strftime('%%Y-%%m-%%d'))]"/>
+                    <separator/>
+                    <filter icon="terp-go-month" string="Previous Month"
+                            domain="[('date','&lt;=',(context_today()+relativedelta(months=1,days=-1)).strftime('%Y-%m-%d')), ('date','&gt;=',(context_today()+relativedelta(months=-1,day=1)).strftime('%Y-%m-%d'))]"/>
+                    <!-- Relativedelta required weeks, days and weekday -->
+                    <filter icon="terp-go-month" string="Previous Week"
+                            domain="[('date','&lt;=',(context_today()+relativedelta(weeks=-2, days=7, weekday=6)).strftime('%Y-%m-%d')), ('date','&gt;=',(context_today()+relativedelta(weeks=-2, days=1, weekday=0)).strftime('%Y-%m-%d'))]"/>
                     <group string="Group By">
                         <filter name="by_assistant" string="Assistant"
                                 context="{'group_by': 'assistant_id'}"/>
