--- a/purchase_indonesia/views/inherit_purchase_order.xml
+++ b/purchase_indonesia/views/inherit_purchase_order.xml
@@ -19,7 +19,8 @@
                           <field name="location" string="Location"/>
                  </xpath>
                  <xpath expr="//field[@name='date_order']" position="after">
-                          <field name="source_purchase_request" string="Source Purchase Request" />
+                          <field name="source_purchase_request" invisible="1" string="Source Purchase Request" />
+                          <field name="request_id" string="PP NO"/>
                  </xpath>
                  <xpath expr="//field[@name='origin']" position="after">
                           <field name="confirmed_by" string="Confirmed By" attrs="{'invisible': [('state','=', 'purchase')]}"/>
