--- a/estate_workshop/views/inherit_mro_order.xml
+++ b/estate_workshop/views/inherit_mro_order.xml
@@ -81,7 +81,7 @@
                              </page>
                              <page string="Planned Sparepart's" attrs="{'readonly': [('state', '!=', 'draft')]}">
                                      <button class="oe_inline" name="%(workshop_procurement_action5)d"
-                                          string="Part Request" target="new" type="action" icon="fa-shopping-cart" attrs="{'invisible': [('state', '!=', 'draft')]}">
+                                          string="Part Request" target="new" type="action" icon="fa-shopping-cart" invisible="1">
                                      </button>
                                      <field name="plannedpart_ids"  attrs="{'readonly': [('state', '!=', 'draft')]}"
                                         context="{'tree_view_ref' : 'estate_workshop.planned_sparepart_tree'}"/>
@@ -152,7 +152,7 @@
                  <xpath expr="//notebook/page[2]" position="before">
                       <page string="Sparepart" attrs="{'invisible': [('state', '!=', 'ready'),('state', '!=', 'done')]}">
                           <button class="oe_inline" name="%(workshop_procurement_action5)d"
-                              string="Part Request" target="new" type="action" icon="fa-shopping-cart" attrs="{'invisible': [('state', '=', 'done')]}">
+                              string="Part Request" target="new" type="action" icon="fa-shopping-cart" invisible="1">
                           </button>
                           <field name="actualpart_ids" attrs="{'readonly': [('state', '!=', 'ready')]}"
                              context="{'tree_view_ref' : 'estate_workshop.actual_sparepart_tree'}"/>
