--- a/estate/views/estate_upkeep.xml
+++ b/estate/views/estate_upkeep.xml
@@ -261,6 +261,8 @@
                                     <tree editable="true">
                                         <field name="activity_id"
                                                options="{'no_create_edit': True}"/>
+                                        <field name="general_account_id" string="COA"
+                                               readonly="True"/>
                                         <field name="cross_team" string="CT"/>
                                         <!--<field name="contract" string="Ctr." attrs="{'invisible': [('activity_contract', '=', False)]}"/>-->
                                         <field name="location_ids"
