--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -6,14 +6,23 @@
              <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='company_id']" position="after">
-                      <field name="type_location" string="Location"/>
-                      <field name="type_functional" string="Unit Functional" required="1"/>
-                      <field name="department_id" string="Department" required="1" options="{'no_create_edit': True}"/>
+                      <field name="type_location" string="Location" attrs="{'readonly': [('state','!=','draft')]}"/>
+                      <field name="type_functional" string="Unit Functional" required="1" attrs="{'readonly': [('state','!=','draft')]}"/>
+                      <field name="department_id" string="Department" required="1" options="{'no_create_edit': True}" attrs="{'readonly': [('state','!=','draft')]}"/>
                       <field name="type_budget" widget="radio" string="Budget" attrs="{'invisible': [('state','not in', ['budget','approval3','approval4','approval5','approval6'])]}"/>
                       <field name="pta_code" string="PTA Reference"
                              attrs="{'invisible': [('state','not in', ['budget','approval3','approval4','approval5','approval6'])]}"/>
                       <field name="currency_id" invisible="1"/>
                       <field name="employee_id" string="Employee" invisible="1" required="0" options="{'no_create_edit': True}"/>
+                 </xpath>
+                 <xpath expr="//field[@name='company_id']" position="replace">
+                     <field name="company_id" string="Company" attrs="{'readonly': [('state','!=','draft')]}"/>
+                 </xpath>
+                 <xpath expr="//field[@name='requested_by']" position="replace">
+                     <field name="requested_by" string="Requested By" attrs="{'readonly': [('state','!=','draft')]}"/>
+                 </xpath>
+                 <xpath expr="//field[@name='assigned_to']" position="replace">
+                     <field name="assigned_to" string="Approver" attrs="{'invisible':[('state','=','draft')],'readonly': [('state','!=','draft')]}"/>
                  </xpath>
              </field>
          </record>
@@ -24,12 +33,12 @@
              <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='assigned_to']" position="after">
-                          <field name="type_product" string="Product Type"/>
+                          <field name="type_product" string="Product Type" attrs="{'readonly': [('state','!=','draft')]}"/>
                           <field name="validation_user" invisible="1"/>
                           <field name="validation_reject" invisible="1"/>
                           <field name="validation_finance" invisible="1"/>
                           <field name="validation_state_budget" invisible="1"/>
-                          <field name="type_purchase" string="Purchase Type" options="{'no_create_edit': True}"/>
+                          <field name="type_purchase" string="Purchase Type" options="{'no_create_edit': True}" attrs="{'readonly': [('state','!=','draft')]}"/>
                  </xpath>
              </field>
          </record>
@@ -69,9 +78,9 @@
                  </xpath>
                  <xpath expr="//field[@name='line_ids']//tree//field[@name='analytic_account_id']" position="after">
                      <field name="validation_budget" invisible="1"/>
-                     <field name="control_unit" string="Unit Control" attrs="{'invisible':[('validation_budget','!=',True)],'readonly': [('validation_budget','!=',True)]}"/>
+                     <field name="control_unit" string="Unit Control" attrs="{'readonly': [('validation_budget','!=',True)]}"/>
                      <field name="budget_available" string="Budget Available"
-                                 attrs="{'invisible':[('validation_budget','!=',True)],'readonly': [('validation_budget','!=',True)]}"/>
+                                 attrs="{'readonly': [('validation_budget','!=',True)]}"/>
                  </xpath>
              </field>
          </record>
@@ -96,9 +105,9 @@
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='line_ids']//form//field[@name='analytic_account_id']" position="after">
                      <field name="validation_budget" invisible="1"/>
-                     <field name="control_unit" string="Unit Control" attrs="{'invisible':[('validation_budget','!=',True)],'readonly': [('validation_budget','!=',True)]}"/>
+                     <field name="control_unit" string="Unit Control" attrs="{'readonly': [('validation_budget','!=',True)]}"/>
                      <field name="budget_available" string="Budget Available"
-                                 attrs="{'invisible':[('validation_budget','!=',True)],'readonly': [('validation_budget','!=',True)]}"/>
+                                 attrs="{'readonly': [('validation_budget','!=',True)]}"/>
                  </xpath>
              </field>
          </record>
@@ -160,11 +169,6 @@
                            statusbar_colors='{"approved":"blue"}'/>
                  </xpath>
 
-                 <xpath expr="//field[@name='assigned_to']" position="replace">
-                     <field name="assigned_to" attrs="{
-                     'invisible':[('state','=','draft')]}"/>
-                 </xpath>
-
                  <xpath expr="//button[@name='button_draft']" position="after">
                      <button name="check_wkf_requester" states="draft"
                             string="Confirm Purchase" type="object"
@@ -197,9 +201,16 @@
                      <button name="action_financial_approval3" states="approval5"
                              string="Approve" type="object"
                             class="oe_highlight" groups="purchase_indonesia.group_purchase_request_director"/>
+
                      <button name="action_financial_approval4" states="approval6"
                              string="Approve" type="object"
                             class="oe_highlight" groups="purchase_indonesia.group_purchase_request_president_director"/>
+
+                     <button name="action_revert" states="approval5,approval6"
+                             string="Correction" type="object"
+                            class="oe_highlight" groups="purchase_indonesia.group_purchase_request_president_director,
+                            purchase_indonesia.group_purchase_request_director"/>
+
                      <button name="action_ro_head_approval" states="approval7"
                              string="Approve" type="object"
                             class="oe_highlight" groups="purchase_indonesia.group_purchase_request_head_of_ro"/>
