--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -73,7 +73,7 @@
              <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='line_ids']//tree//field[@name='analytic_account_id']" position="before">
-                          <field name="price_per_product" invisible="0" string="Est Price"/>
+                          <field name="price_per_product" invisible="0" string="Est Price" attrs="{'readonly': [('is_editable','=', False)]}"/>
                           <field name="total_price" invisible="0" string="Total Price"/>
                  </xpath>
                  <xpath expr="//field[@name='line_ids']//tree//field[@name='analytic_account_id']" position="after">
@@ -92,7 +92,7 @@
              <field name="inherit_id" ref="purchase_request.view_purchase_request_form"/>
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='line_ids']//form//group[@name='group6']//div" position="after">
-                          <field name="price_per_product" string="Est Price "/>
+                          <field name="price_per_product" string="Est Price " attrs="{'readonly': [('is_editable','=', False)]}"/>
                           <field name="total_price" string="Total Price"/>
                  </xpath>
              </field>
