--- a/purchase_indonesia/views/inherit_stock_picking.xml
+++ b/purchase_indonesia/views/inherit_stock_picking.xml
@@ -23,7 +23,7 @@
                      <field name="delivery_number" string="DO Reference" attrs="{'readonly': [('state', '=', 'done')]}"/>
                  </xpath>
                  <xpath expr="//button[@name='show_details']" position="before">
-                     <button name="split_quantities" class="oe_link"  icon="fa-list" string="Split" type="object"/>
+                     <button name="split_quantities" attrs="{'invisible': ['|',('qty_done', '&gt;', 0),('qty_done', '&lt;', 0)]}" class="oe_link"  icon="fa-list" string="Split" type="object"/>
                      <button name="do_force_donce"
                       class="oe_link"  attrs="{'invisible': ['|',('qty_done', '&gt;', 0),('qty_done', '&lt;', 0)]}" icon="fa-scissors" string="Force Done" type="object"/>
                  </xpath>
