[ADD] estate: edit activity on tree instead of form

--- a/estate/views/estate_activity_view.xml
+++ b/estate/views/estate_activity_view.xml
@@ -7,12 +7,17 @@
             <field name="model">estate.activity</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
-                <tree colors="blue:type=='view'">
+                <tree colors="blue:type=='view'" editable="true">
                     <!--<field name="complete_name"/>-->
                     <field name="code"/>
                     <field name="complete_name"/>
+                    <field name="uom_id" string="UoM"/>
+                    <field name="qty_base" string="Std. Qty."/>
+                    <field name="standard_price" digits="[16,2]"/>
                     <field name="wage_method"/>
-                    <field name="type"/>
+                    <field name="contract"/>
+                    <!-- do not delete field below -->
+                    <field name="type" invisible="True"/>
                 </tree>
             </field>
         </record>
