[FIX] estate: cannot add estate activity
* Wrong value of editable attribute.
* [IMP] hr_fingerprint_ams: slow loading

--- a/estate/views/estate_activity_view.xml
+++ b/estate/views/estate_activity_view.xml
@@ -7,7 +7,7 @@
             <field name="model">estate.activity</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
-                <tree colors="blue:type=='view'" editable="true">
+                <tree colors="blue:type=='view'">
                     <!--<field name="complete_name"/>-->
                     <field name="code"/>
                     <field name="complete_name"/>
