--- a/hr_fingerprint_ams/views/hr_fingerprint.xml
+++ b/hr_fingerprint_ams/views/hr_fingerprint.xml
@@ -143,10 +143,10 @@
                     <filter name="filter_year" icon="terp-go-year" string="This Year"
                             domain="[('date','&lt;=',(context_today()+relativedelta(day=31, month=12)).strftime('%%Y-%%m-%%d')), ('date','&gt;=',(context_today()-relativedelta(day=1, month=1)).strftime('%%Y-%%m-%%d'))]"/>
                     <separator/>
-                    <filter icon="terp-go-month" string="Previous Month"
+                    <filter name="filter_previous_month" string="Previous Month" icon="terp-go-month"
                             domain="[('date','&lt;=',(context_today()+relativedelta(months=0,day=1,days=-1)).strftime('%Y-%m-%d')), ('date','&gt;=',(context_today()+relativedelta(months=-1,day=1)).strftime('%Y-%m-%d'))]"/>
                     <!-- Relativedelta required weeks, days and weekday -->
-                    <filter icon="terp-go-month" string="Previous Week"
+                    <filter name="filter_previous_week" string="Previous Week" icon="terp-go-month"
                             domain="[('date','&lt;=',(context_today()+relativedelta(weeks=-2, days=7, weekday=6)).strftime('%Y-%m-%d')), ('date','&gt;=',(context_today()+relativedelta(weeks=-2, days=1, weekday=0)).strftime('%Y-%m-%d'))]"/>
                     <group string="Group By">
                         <filter name="by_assistant" string="Assistant"
@@ -206,6 +206,7 @@
             <field name="view_id" ref="labour_fingerprint_view_tree"/>
             <field name="context">{'search_default_by_assistant': 1,
                 'search_default_by_employee': 1,
+                'search_default_filter_previous_week': 1,
                 'search_default_filter_no_fingerprint': 1}</field>
         </record>
 
