--- a/purchase_indonesia/views/quotation_comparison.xml
+++ b/purchase_indonesia/views/quotation_comparison.xml
@@ -272,7 +272,7 @@
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" colors="red:isheader==6; blue:isheader==7; blue:isheader==8; blue:isheader==9;" create="false" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" decoration-bf="isheader==6" decoration-info="isheader in (7,8,9)" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
                     <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
                     <field name="isheader" invisible="1"/>
@@ -293,7 +293,7 @@
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" colors="red:isheader==6; blue:isheader==7; blue:isheader==8; blue:isheader==9;" create="false" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" decoration-bf="isheader==6" decoration-info="isheader in (7,8,9)" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
                     <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
                     <field name="isheader" invisible="1"/>
@@ -315,7 +315,7 @@
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" colors="red:isheader==6; blue:isheader==7; blue:isheader==8; blue:isheader==9;" create="false" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" decoration-bf="isheader==6" decoration-info="isheader in (7,8,9)" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
                     <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
                     <field name="isheader" invisible="1"/>
@@ -338,7 +338,7 @@
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" colors="red:isheader==6; blue:isheader==7; blue:isheader==8; blue:isheader==9;" create="false" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" decoration-bf="isheader==6" decoration-info="isheader in (7,8,9)" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
                     <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
                     <field name="isheader" invisible="1"/>
@@ -362,7 +362,7 @@
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" colors="red:isheader==6; blue:isheader==7; blue:isheader==8; blue:isheader==9;" create="false" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" decoration-bf="isheader==6" decoration-info="isheader in (7,8,9)" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
                     <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
                     <field name="isheader" invisible="1"/>
@@ -387,7 +387,7 @@
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" colors="red:isheader==6; blue:isheader==7; blue:isheader==8; blue:isheader==9;" create="false" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" decoration-bf="isheader==6" decoration-info="isheader in (7,8,9)" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
                     <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
                     <field name="isheader" invisible="1"/>
@@ -413,7 +413,7 @@
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" colors="red:isheader==6; blue:isheader==7; blue:isheader==8; blue:isheader==9;" create="false" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" decoration-bf="isheader==6" decoration-info="isheader in (7,8,9)" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
                     <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
                     <field name="isheader" invisible="1"/>
@@ -440,7 +440,7 @@
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" colors="red:isheader==6; blue:isheader==7; blue:isheader==8; blue:isheader==9;" create="false" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" decoration-bf="isheader==6" decoration-info="isheader in (7,8,9)" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
                     <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
                     <field name="isheader" invisible="1"/>
@@ -468,7 +468,7 @@
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" colors="red:isheader==6; blue:isheader==7; blue:isheader==8; blue:isheader==9;" create="false" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" decoration-bf="isheader==6" decoration-info="isheader in (7,8,9)" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
                     <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
                     <field name="isheader" invisible="1"/>
@@ -497,7 +497,7 @@
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" colors="red:isheader==6; blue:isheader==7; blue:isheader==8; blue:isheader==9;" create="false" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" decoration-bf="isheader==6" decoration-info="isheader in (7,8,9)" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
                     <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
                     <field name="isheader" invisible="1"/>
@@ -527,7 +527,7 @@
             <field name="name">Quotation Comparison Line</field>
             <field name="model">v.quotation.comparison.form.line</field>
             <field name="arch" type="xml">
-                <tree string="Quotation Comparison Line Tree" colors="red:isheader==6; blue:isheader==7; blue:isheader==8; blue:isheader==9;" create="false" editable='bottom' delete="true">
+                <tree string="Quotation Comparison Line Tree" decoration-bf="isheader==6" decoration-info="isheader in (7,8,9)" create="false" editable='bottom' delete="true">
                     <field name="id"  invisible="1" readonly="1"/>
                     <field name="req_id" invisible="1" string="Requisition_id" options="{'no_create_edit': True}"/>
                     <field name="isheader" invisible="1"/>
